fix: nav bar spacing

--- a/apps/frontend/src/app/navbar/nav-bar.component.scss
+++ b/apps/frontend/src/app/navbar/nav-bar.component.scss
@@ -2,7 +2,7 @@
   .nav-bar-header {
     display: flex;
     align-items: center;
-    padding: 8px 16px;
+    padding: 8px 0;
 
     .nav-bar-header-left {
       flex: 1 1 100%;
@@ -12,7 +12,7 @@
       flex: 1 0 auto;
       display: flex;
       align-items: center;
-      margin-right: 1em;
+      margin-right: 0.3em;
       flex-direction: row;
     }
   }
